Modify the reflection utility to be able to recognize property of type object and setter with string param.
git-svn-id: https://svn.eu.apache.org/repos/asf/incubator/activemq/trunk@417699 13f79535-47bb-0310-9956-ffa450edef68